fix changes and add rational page

--- a/index_rational.html
+++ b/index_rational.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="main-wrapper">
-    <div class="top-banner">
+    <div class="top-banner rational-bg">
       <div class="container">
         <header>
           <div class="row">
@@ -31,14 +31,10 @@
         </header>
         <div class="top-banner-txt">
           <div class="row">
-            <div class="col-md-7">
-              <h2>Kiire ja mugav lisaraha siis, kui seda vajad</h2>
-              <p>Vahel lihtsalt juhtub, et vajad veidi lisaraha. Põhjuseks võib olla mõni ootamatu kulu või siiras soov ellu viia pikaajaline unistus.</p>
-              <ul class="top-list">
-                <li><img src="./assets/images/tick.png" alt=""> Saad raha kätte 15 minutiga</li>
-                <li><img src="./assets/images/tick.png" alt=""> Võimalus taotleda kuni 4000 eurot</li>
-                <li><img src="./assets/images/tick.png" alt=""> Maksa tagasi 3-36 kuu jooksul</li>
-              </ul>
+            <div class="col-md-10">
+              <h2>Rahaasjade ette planeerimine on oluline.</h2>
+              <h4>Ent vahel sellest ei piisa.</h4>
+              <p>Õnneks ei pea Krediidikontoga ettenägematuid kulutusi kartma. Konto on nagu virtuaalne krediitkaart. Vali endale kuulimiit, mille piires kasuta raha täpselt Sulle sobival ajal ja summas. Tagasimaksete summa ja aja üle otsustad Sina.</p>
             </div>
           </div>
         </div>
@@ -75,181 +71,186 @@
       </div>
     </div>
     <div class="main-content">
-      <div class="info-layer">
+      <div class="quote-layer">
         <div class="container">
           <div class="row">
-            <div class="col-md-4 info-block">
-              <div class="img-wrap">
-                <img src="./assets/images/info-icon-1.png" alt="">
-              </div>
-              <h4>Kodu remondiks</h4>
-              <p>
-                Sul pole vaja tagatist ega kulukat notariaalselt lepingut.
+            <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
+              <p class="quote-wrap">
+                Mulle meeldis see, et mulle seletati kõik väga täpselt ära, tänu millele sain asjadest paremini aru.
+              </p>
+              <p class="name">
+                Karita,
+              </p>
+              <p class="info">
+                Tartu, 20
               </p>
             </div>
-            <div class="col-md-4 info-block">
-              <div class="img-wrap">
-                <img src="./assets/images/info-icon-2.png" alt="">
-              </div>
-              <h4>Auto ostmiseks</h4>
-              <p>
-                Saad sõiduki kohe enda nimele vormistada ning kaskokindlustus on vabatahtlik.
+            <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
+              <p class="quote-wrap">
+                Kiire reageerimine, sõbralik ja asjalik suhtlus kliendiga.
+              </p>
+              <p class="name">
+                Aivar,
+              </p>
+              <p class="info">
+                Valga, 50
               </p>
             </div>
-            <div class="col-md-4 info-block">
-              <div class="img-wrap">
-                <img src="./assets/images/info-icon-3.png" alt="">
-              </div>
-              <h4>Kaupade eest tasumiseks</h4>
-              <p>
-                Osta kõike, mida soovid ning maksa raha tagasi siis, kui see Sulle mugav on.
+            <div class="col-md-4 col-md-offset-0 col-sm-8 col-sm-offset-2 quote-block">
+              <p class="quote-wrap">
+                Kogu süsteem on konkureerivatest laenuandjatest täiuslikum.
+              </p>
+              <p class="name">
+                Madis,
+              </p>
+              <p class="info">
+                Paldiski, 27
               </p>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="question-layer">
+      <div class="rational-info-layer">
         <div class="container">
           <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <h2>Miks võtta lisaraha Credit24'st?</h2>
-              <ul class="question-list">
-                <li class="list-group">
-                  <div class="check-cell">
-                    <img src="./assets/images/tick.png" alt="">
-                  </div>
-                  <div class="text-cell">
-                    <span>
-                      Ühekordne leping - edaspidi kasuta lisaraha täpselt siis, kui seda soovid.
-                    </span>
-                  </div>
-                </li>
-                <li class="list-group">
-                  <div class="check-cell">
-                    <img src="./assets/images/tick.png" alt="">
-                  </div>
-                  <div class="text-cell">
-                    <span>
-                      Paindlik maksegraafik - Sina otsustad, millal ja kui palju tagasi maksad.
-                    </span>
-                  </div>
-                </li>
-                <li class="list-group">
-                  <div class="check-cell">
-                    <img src="./assets/images/tick.png" alt="">
-                  </div>
-                  <div class="text-cell">
-                    <span>
-                      Kuutasu 0€.
-                    </span>
-                  </div>
-                </li>
-                <li class="list-group">
-                  <div class="check-cell">
-                    <img src="./assets/images/tick.png" alt="">
-                  </div>
-                  <div class="text-cell">
-                    <span>
-                      Kui kasutusse võetud summa ületab 1000 €, alustad tagasi maksmist 2 kuu pärast.
-                    </span>
-                  </div>
-                </li>
-                <li class="list-group">
-                  <div class="check-cell">
-                    <img src="./assets/images/tick.png" alt="">
-                  </div>
-                  <div class="text-cell">
-                    <span>
-                      Intressi maksad vaid kasutatud summalt.
-                    </span>
-                  </div>
-                </li>
-                <li class="list-group">
-                  <div class="check-cell">
-                    <img src="./assets/images/tick.png" alt="">
-                  </div>
-                  <div class="text-cell">
-                    <span>
-                      Tutvu pakkumise tingimustega lähemalt meie <a href="https://credit24.com/ee/krediidikonto/">kodulehel</a>.
-                    </span>
-                  </div>
-                </li>
-              </ul>
+            <div class="col-sm-4 rat-info-block">
+              <div class="icon-wrap">
+                <img src="./assets/images/rat-icon-1.png" alt="">
+              </div>
+              <div class="rat-txt">
+                <p class="number">120 000 +</p>
+                <p>rahulolevat klienti Eestis</p>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="question-bottom-layer">
-          <div class="list-block-wrap">
-            <div class="triangle-down"><div></div></div>
-            <div class="list-block-inner">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-8 col-md-offset-2">
-                    <div class="list-block">
-                      <h4>Kuidas saada raha kätte 15 minutiga?</h4>
-                      <ul class="list">
-                        <li>
-                          <div class="icon-wrap">
-                            <div class="icon-inner">
-                              <img src="./assets/images/list-icon-1.png" alt="">
-                            </div>
-                          </div>
-                          <span>Vajuta “Taotlen kohe” nupule.</span>
-                        </li>
-                        <li>
-                          <div class="icon-wrap">
-                            <div class="icon-inner">
-                              <img src="./assets/images/list-icon-2.png" alt="">
-                            </div>
-                          </div>
-                          <span>Täida avaldus ja vali soovitud summa.</span>
-                        </li>
-                        <li>
-                          <div class="icon-wrap">
-                            <div class="icon-inner">
-                              <img src="./assets/images/list-icon-3.png" alt="">
-                            </div>
-                          </div>
-                          <span>Saa hetkega personaalne pakkumine.</span>
-                        </li>
-                        <li>
-                          <div class="icon-wrap">
-                            <div class="icon-inner">
-                              <img src="./assets/images/list-icon-4.png" alt="">
-                            </div>
-                          </div>
-                          <span>Sinuga võtab ühendust meie kliendihaldur, et täpsustada detailid.</span>
-                        </li>
-                        <li>
-                          <div class="icon-wrap">
-                            <div class="icon-inner">
-                              <img src="./assets/images/list-icon-5.png" alt="">
-                            </div>
-                          </div>
-                          <span>Raha kantakse Sinu Credit24 kontole.</span>
-                        </li>
-                      </ul>
-                      <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
-                    </div>
-                  </div>
-                </div>
+            <div class="col-sm-4 rat-info-block">
+              <div class="icon-wrap">
+                <img src="./assets/images/rat-icon-2.png" alt="">
+              </div>
+              <div class="rat-txt">
+                <p class="number">11</p>
+                <p>tegevusaastat</p>
+              </div>
+            </div>
+            <div class="col-sm-4 rat-info-block">
+              <div class="icon-wrap">
+                <img src="./assets/images/rat-icon-3.png" alt="">
+              </div>
+              <div class="rat-txt">
+                <p class="number">128 mln</p>
+                <p>eurot väljastatud laene</p>
               </div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="rat-info-table">
+        <div class="container">
+          <table class="table">
+            <tbody>
+              <tr>
+                <td>Raha kätte</td>
+                <td>Alla 15 minuti</td>
+              </tr>
+              <tr>
+                <td>Lisaraha</td>
+                <td>Kuni 4000 eurot</td>
+              </tr>
+              <tr>
+                <td>Tagasimakseperiood</td>
+                <td>3-36 kuud</td>
+              </tr>
+              <tr>
+                <td>Maksegraafik</td>
+                <td>Sina otsustad</td>
+              </tr>
+              <tr>
+                <td>1 taotlus, edaspidi kasuta lisaraha siis, kui soovid</td>
+                <td><img src="./assets/images/orange-tick.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>Raha väljamakse</td>
+                <td>Mobiiliäpist või veebikeskkonna iseteenindusest</td>
+              </tr>
+              <tr>
+                <td>Intressi maksad</td>
+                <td>Ainult kulutatud summalt</td>
+              </tr>
+              <tr>
+                <td><a href="https://credit24.com/ee/faqs">30 päeva rahulolugarantii</a></td>
+                <td><img src="./assets/images/orange-tick.png" alt=""></td>
+              </tr>
+              <tr>
+                <td>Lepingu- ja kuutasu</td>
+                <td>0€</td>
+              </tr>
+              <tr>
+                <td>Maksepuhkus</td>
+                <td>Tasuta</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <div class="add-cash-layer">
+        <div class="container">
+          <h2>Lisaraha saamine on lihtne:</h2>
+          <div class="row">
+            <div class="col-md-4 info-block">
+              <div class="img-wrap">
+                <img src="./assets/images/rat-icon-4.png" alt="">
+              </div>
+              <h4>Tähelepanu</h4>
+              <p>
+                Vajuta nupule “Taotle kohe“ ja täida avaldus soovitud summaga.
+              </p>
+            </div>
+            <div class="col-md-4 info-block">
+              <div class="img-wrap">
+                <img src="./assets/images/rat-icon-5.png" alt="">
+              </div>
+              <h4>Valmis olla</h4>
+              <p>
+                Saa hetkega personaalne pakkumine ja allkirjasta leping.
+              </p>
+            </div>
+            <div class="col-md-4 info-block">
+              <div class="img-wrap">
+                <img src="./assets/images/rat-icon-6.png" alt="">
+              </div>
+              <h4>Start</h4>
+              <p>
+                Raha  jõuab Sinu Krediidikontole 15 minuti jooksul.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+              <div class="check-layer">
+                <p>Krediidkontolt saad raha väljamakseid teha oma arvelduskontole nii mitu korda ja sellises summas, kui ise soovid (kasvõi 10€ kaupa), seni kuni väljamaksete kogusumma ei ületa limiiti, mille oled omale esialgselt valinud.</p>
+              </div>
+              <div class="check-layer">
+                <p>Kui oled kulutatud summa tagasi maksnud, saad lisaraha taas kasutusele võtta oma limiidi piires.</p>
+              </div>
+            </div>
+          </div>
+          <div class="add-cash-button-wrap">
+            <button type="button" class="btn btn-yellow">Taotlen Kohe</button>
+          </div>
+        </div>
+      </div>
+
     </div>
-
   </div>
-  <footer>
+  <footer class="rational-foot">
     <div class="container">
 
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <div class="footer-txt">
-            <p>Credit24 pakub krediiti Krediidikonto limiidi alusel. 1000 € laenamisel 12 kuuks, fikseeritud intressimääraga 45,00% aastas, on KKM 56,50% aastas, lepingutasu 0 €, tagasimaksete summa 1260,15 € ja kogusumma 1260,15 €. Tutvu tingimustega credit24.ee ja pea nõu asjatundjaga lühinumbril 1324.</p>
-            <a href="#" class="foot-ask">Vajad abi?</a>
+            <p>Kui Sul on küsimusi, võta julgesti ühendust meie klienditeenindusega.</p>
             <div class="row">
               <div class="col-sm-6 btn-wrap-right">
                 <a href="#" class="btn btn-blue" data-toggle="modal" data-target="#phoneModal"><img src="./assets/images/button-icon-1.png" alt=""> <span>1324</span></a>
