--- a/index_ru.html
+++ b/index_ru.html
@@ -47,7 +47,7 @@
             <div class="panel">
               <div class="panel-main-wrap">
                 <div class="panel-main">
-                  <p class="range-label">Используемая сумма: <span>1250€</span></p>
+                  <p class="range-label">Необходимая сумма: <span>1250€</span></p>
                   <div class="range-wrap">
                     <span class="count">0€</span>
                     <input id="range1" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="4000" data-slider-step="1" data-slider-value="1000"/>
@@ -61,7 +61,7 @@
                   </div>
                 </div>
                 <div class="panel-cell">
-                  <p class="ttl">Месячная плата:</p>
+                  <p class="ttl">Месячный платеж:</p>
                   <b>125€</b>
                   <span>Интрес в месяц: 3,75%</span>
                 </div>
