fix styles according to the design

--- a/index_ru.html
+++ b/index_ru.html
@@ -45,7 +45,7 @@
         <div class="row">
           <div class="col-md-7">
             <div class="panel">
-              <div class="panel-main-wrap">
+              <div class="panel-main-wrap rus-lang">
                 <div class="panel-main">
                   <p class="range-label">Необходимая сумма: <span>1250€</span></p>
                   <div class="range-wrap">
